@@ -1,0 +1,8 @@
+package samples.singleton;
+
+public class SimpleStaticService {
+
+    public static String say(final String string) {
+        return "Hello " + string;
+    }
+}
